objects/Product2/fields/Allocated_Sales__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Sales__c</fullName>
    <label>Allocated Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>