objects/Product2/fields/Extended_Sales__c.field-meta.xml
<CustomField>
    <fullName>Extended_Sales__c</fullName>
    <label>Extended Sales</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>