objects/Product2/fields/Extended_Supplier_Description__c.field-meta.xml
<CustomField>
    <fullName>Extended_Supplier_Description__c</fullName>
    <label>Extended Supplier Description</label>
    <length>30000</length>
    <type>Html</type>
</CustomField>