objects/Product2/fields/Include_In_Stock_control__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Stock_control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Files/images Include In Stock control</label>
    <type>Checkbox</type>
</CustomField>