objects/Product2/fields/IsPhantom__c.field-meta.xml
<CustomField>
    <fullName>IsPhantom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPhantom</label>
    <type>Checkbox</type>
</CustomField>