objects/Product2/fields/IsService__c.field-meta.xml
<CustomField>
    <fullName>IsService__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsService</label>
    <type>Checkbox</type>
</CustomField>