objects/Product2/fields/Manufacturer_Code__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Code__c</fullName>
    <formula>ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Code</label>
    <type>Text</type>
</CustomField>