objects/Product2/fields/Maximum_stock_level__c.field-meta.xml
<CustomField>
    <fullName>Maximum_stock_level__c</fullName>
    <label>Maximum stock level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>