objects/Product2/fields/Min_Stock__c.field-meta.xml
<CustomField>
    <fullName>Min_Stock__c</fullName>
    <label>Re-order stock level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>