objects/Product2/fields/Minimum_Order_Qty__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Order_Qty__c</fullName>
    <label>Minimum Order Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>