objects/Product2/fields/ModxProductId__c.field-meta.xml
<CustomField>
    <fullName>ModxProductId__c</fullName>
    <label>ModxProductId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>