objects/Product2/fields/No_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>No_In_Stock__c</fullName>
    <label>No. In Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>