objects/Product2/fields/Non_Stock__c.field-meta.xml
<CustomField>
    <fullName>Non_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Stock</label>
    <type>Checkbox</type>
</CustomField>