objects/Product2/fields/On_Order_Purchases__c.field-meta.xml
<CustomField>
    <fullName>On_Order_Purchases__c</fullName>
    <label>On Order Purchases</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>