objects/Product2/fields/Prd_Price__c.field-meta.xml
<CustomField>
    <fullName>Prd_Price__c</fullName>
    <label>Prd Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>