objects/Product2/fields/Preferred_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Suppliers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Supplier</label>
    <type>Checkbox</type>
</CustomField>