objects/Product2/fields/Product_Currency__c.field-meta.xml
<CustomField>
    <fullName>Product_Currency__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <label>Product Currency</label>
    <type>Text</type>
</CustomField>