objects/Product2/fields/Product_Name_Check__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Check__c</fullName>
    <inlineHelpText>Enter the product name again in here, and it will check to see if there is another product already created with this name, when you save. This is to avoid duplicates.</inlineHelpText>
    <label>Product Name Check</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>