objects/Product2/fields/Serial__c.field-meta.xml
<CustomField>
    <fullName>Serial__c</fullName>
    <label>Serial Numbers</label>
    <length>80</length>
    <type>Text</type>
</CustomField>