objects/Product2/fields/Service_Sheet_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet_API_Name__c</fullName>
    <inlineHelpText>If this product corresponds to a field on a service sheet, enter the API name ( EG FA_SUN_1 ) in this field. Do not include the __c. This API Name can be found in the service sheet specific field listing.</inlineHelpText>
    <label>Service Sheet API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>