objects/Product2/fields/Service_Sheet_Picklist_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet_Picklist_Name__c</fullName>
    <inlineHelpText>If this product corresponds to a picklist on a service sheet, enter the API name of the picklist in this field. Do not include the __c. This API Name can be found in the service sheet specific field listing.</inlineHelpText>
    <label>Service Sheet Picklist Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>