objects/Product2/fields/Service_Sheet_Picklist_Option__c.field-meta.xml
<CustomField>
    <fullName>Service_Sheet_Picklist_Option__c</fullName>
    <inlineHelpText>If this product corresponds to a picklist on a service sheet, enter the option ( eg on Fire Alarms it may be ADT ) that corresponds to this product.</inlineHelpText>
    <label>Service Sheet Picklist Option</label>
    <length>100</length>
    <type>Text</type>
</CustomField>