objects/Product2/fields/Stock_Unit__c.field-meta.xml
<CustomField>
    <fullName>Stock_Unit__c</fullName>
    <label>Stock Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Metre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>