objects/Product2/fields/Supplier_code1__c.field-meta.xml
<CustomField>
    <fullName>Supplier_code1__c</fullName>
    <label>Supplier code1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>