objects/Product2/fields/Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code__c</fullName>
    <formula>Suppliers__r.Supplier_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Code</label>
    <type>Text</type>
</CustomField>