objects/Product2/fields/Supplier_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Cost_Price__c</fullName>
    <label>Supplier Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>