objects/Product2/fields/Supplier_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product_Code__c</fullName>
    <label>Supplier Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>