objects/Product2/fields/Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Suppliers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suppliers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products (Suppliers)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>