objects/Product2/fields/Total_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Total_Delivered__c</fullName>
    <label>Total Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>