objects/Product2/fields/Total_In_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Total_In_Vehicle__c</fullName>
    <label>Total In Vehicle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>