objects/Product2/fields/Total_Stock_In_Hand__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock_In_Hand__c</fullName>
    <label>Total Stock In Hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>