objects/Product2/fields/Unique_Record__c.field-meta.xml
<CustomField>
    <fullName>Unique_Record__c</fullName>
    <label>Unique Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>