objects/Product2/fields/UniqueSageCode__c.field-meta.xml
<CustomField>
    <fullName>UniqueSageCode__c</fullName>
    <inlineHelpText>This is the unique Sage Code, being a combination of the Sage Code and the Nominal Code. It is a required field on the product, and also is the unique external link to Sage.</inlineHelpText>
    <label>Eclipse Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>