objects/Product2/validationRules/Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Active</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), IsActive = FALSE)</errorConditionFormula>
    <errorMessage>Please Check Active</errorMessage>
</ValidationRule>